  -Dmain=SDL_main and use -mno-cygwin on Cygwin.  SDL_win32_main.c is now 
  required from the sdl source.  Update documentation in INSTALL. This fixes
  the stdout.txt problem.
* atari_sdl.c: fix for windows sdl version.  Make SDL_VIDEODRIVER=directx by
  default because it is much faster.  SDL 1.2.10+ uses windib as the default.

2007-07-30  Perry McFarlane  <perry_m@fastmail.fm>
* configure.ac: fix for windows sdl version.  Don't require winmm or gdi32

** 2.0.3 released on 2007-07-11

2007-04-23  Piotr Fusik  <fox@scene.pl>
* win32/msc/Makefile: fixed a problem that appeared when I switched to another
  version of NMAKE ("fatal error U1100: macro '$@' is illegal in the context
  of batch rule '.c.obj'")


2007-04-23  Paulo Lopes  <paulo.lopes@ist.utl.pt>
* win32/atari_win32.c: new command-line option "-win32keys" for keyboard
  layouts different from US (the emulator relies on Win32 API to do scan code
  translations)


2006-12-07  Paulo Lopes  <paulo.lopes@ist.utl.pt>
* win32/main.c, win32/screen_win32.[ch]: an option to run the emulator
  in a window ("-windowed" on the command line)


2006-11-05  Piotr Fusik  <fox@scene.pl>
* DOC/PORTING: an introduction to writing platform-specific part of Atari800


2006-10-31  Kostas Nakos  <knakos@gmail.com>
* util.c: Make sure user does not updir from the root in WinCE


2006-10-30  Kostas Nakos  <knakos@gmail.com>
* wince/port/*, ui_basic.c, DOC/INSTALL.wince: added support for QVGA landscape
  smartphones, added the virtual keyboard (kb_ui) and updated documentation.


2006-09-04  Piotr Fusik  <fox@scene.pl>
* cartridge.[ch], ui.c, DOC/cart.txt: added 128 KB SpartaDOS X cartridge type,
  by the way: shortened the cartridge code and replaced letters with numbers
  for bank indexing in the documentation


2006-07-23  Piotr Fusik  <fox@scene.pl>
* input.[ch], atari_x11.c, win32/main.c: middle button support
  for ST and Amiga mice


2006-07-21  Piotr Fusik  <fox@scene.pl>